Bws zu Beweis umbenannt

--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -2,9 +2,9 @@
 
 
 \section{Vektoren}
-\begin{Bws}
+\begin{Beweis}
 Ein Vektor ist Element eines Vektorraums.
-\end{Bws}\\
+\end{Beweis}\\
 Vektorräume, wir erinnern uns zurück. Verknüpfungen, inverse Elemente und die dazugehörenden Gesetze, konsequente Definitionen und mathematische Korrektheit, die guten alten Zeiten...\\
 Tatsächlich kann ein Vektor in den meisten Fällen als Verschiebung bezeichnet werden, \textbf{nicht aber als Pfeil oder Strich!}\\
 \subsection{Besondere Vektoren}
