--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -10,7 +10,7 @@ Eine Funktion ist stetig an der Stelle $x_{0}$, wenn:
 \item $\lim\limits_{x \rightarrow x_{0}} {f(x)}$ existiert 
 \item $\lim\limits_{x \rightarrow x_{0}^{\pm}} {f(x)}=f(x_{0})$\\
 \end{enumerate}
-Stetigkeit ist eine lokale Eigenschaft. Die Funktion $f$ heißt dann stetig, wenn sie an jeder Stelle ihrer Definitionsmenge stetig ist.
+Stetigkeit ist eine lokale Eigenschaft. Die Funktion $f$ heiï¿½t dann stetig, wenn sie an jeder Stelle ihrer Definitionsmenge stetig ist.
 
 \begin{Bemerkung}
 Ist $f$ stetig und $I\subset \R$ ein reelles Intevall, dann ist $f(I)$ ebenfalls ein Intervall. Ist $f$ zudem streng monoton, so ist die Umkehrfunktion $f^{-1}$ ebenfalls stetig.
@@ -18,7 +18,7 @@ Ist $f$ stetig und $I\subset \R$ ein reelles Intevall, dann ist $f(I)$ ebenfalls
 
 \subsubsection{Stetige Fortsetzungen}
 
-beim Vereinfachen von gebrochenrationalen Funktionen ist Vorsicht geboten, denn eine hebbare Definitionslücke ''aufzuheben" ver"andert den Definitionsbereich der Funktion. Die daraus resultierende Funktion wird \textbf{stetige Fortsetzung} genannt.
+beim Vereinfachen von gebrochenrationalen Funktionen ist Vorsicht geboten, denn eine hebbare Definitionslï¿½cke ''aufzuheben" ver"andert den Definitionsbereich der Funktion. Die daraus resultierende Funktion wird \textbf{stetige Fortsetzung} genannt.
 
 \section{Differenzierbarkeit}
 
@@ -27,9 +27,9 @@ Eine Funktion ist differenzierbar an der Stelle $x_{0} \in D$, wenn der beitseit
 $\lim\limits_{h \rightarrow 0^{+}} {\dfrac{f(x_{0}+h)-f(x_{0})}{h}} = \lim\limits_{h \rightarrow 0^{-}} {\dfrac{f(x_{0}+h)-f(x_{0})}{h}} =f'(x_{0})$\\
 \\
 Dieser Grenzwert ist die \textbf{Ableitung} von $f$ an der Stelle $x_{0}$.\\
-Die Funktion heißt differenzierbar, wenn sie $\forall x \in D$ differenzierbar ist.\\
+Die Funktion heiï¿½t differenzierbar, wenn sie $\forall x \in D$ differenzierbar ist.\\
 \\
-Die Funktion $f(x)=|x|$ ist nicht differenzierbar, da bei der Stelle $x_{0}=0$ der linksseitige Grenzwert des differenzenquotienten ($\lim\limits_{h \rightarrow 0^{-}}{f'(x_{0})=-1$}) nicht mit dem rechtsseitigen Grenzwert (1) übereinstimmt.\\
+Die Funktion $f(x)=|x|$ ist nicht differenzierbar, da bei der Stelle $x_{0}=0$ der linksseitige Grenzwert des differenzenquotienten ($\lim\limits_{h \rightarrow 0^{-}}{f'(x_{0})=-1$}) nicht mit dem rechtsseitigen Grenzwert (1) ï¿½bereinstimmt.\\
 
 \subsection{Zusammenhang zwischen Stetigkeit und Differenzierbarkeit}
 
@@ -46,7 +46,7 @@ Sind die Funktionen $u$ und $v$ an der Stelle $x_{0}$ $\in$ $D$ differenzierbar,
 \\
 $f'(x0) = u'(x_{0})v(x_{0})+u(x_{0})v'(x_{0})$\\
 
-\begin{Bws}
+\begin{Beweis}
 $
 \begin{array}{rcl}
 \lim\limits_{h \rightarrow 0} {\dfrac{f(x_{0}+h)-f(x_{0})}{h}} & = & \lim\limits_{h \rightarrow 0} {\dfrac{u(x_{0})v({x_{0}+h)-u(x_{0})v(x_{0})}}{h}}\\
@@ -57,7 +57,7 @@ $
 &=& u'(x_{0})v(x_{0}) - u(x_{0})v'(x_{0}) 
 \end{array}
 $
-\end{Bws}
+\end{Beweis}
 
 \subsection{Quotientenregel}
 
@@ -65,7 +65,7 @@ Sind die Funktionen $u$ und $v$ an der Stelle $x_{0}$ $\in$ $D$ differenzierbar,
 \\
 $f'(x_{0})=\frac{u'(x_{0})\cdot v(x_{0})-u(x_{0})\cdot v'(x_{0})}{v^2(x_{0})}$\\
 
-\begin{Bws}
+\begin{Beweis}
 $
 \begin{array}{rcl}
 \lim\limits_{h \rightarrow 0} {\dfrac{f(x_{0}+h)-f(x_{0})}{h}}&=& \lim\limits_{h \rightarrow 0} { \dfrac{ \dfrac{u(x_{0}+h)} {v(x_{0}+h)}- \dfrac{u(x_{0})}  {v(x_{0})}}  {h}}\\
@@ -79,7 +79,7 @@ $
 &=& { \dfrac{u'(x_{0})v(x_{0})-u(x_{0})v'(x_{0})} {(v(x_{0}))^2}    }\\
 \end{array}
 $
-\end{Bws}
+\end{Beweis}
 
 \subsection{Kettenregel}
 
