Update zum Sytle der Theoreme, Beweise, Definitionen

--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -1,11 +1,11 @@
 \chapter{Trigonometrie}
 \section{Kurze Wiederholung}
-\begin{Beweis}
+\begin{Definition}
 Im Kreis mit Radius 1 gelte:\\
 $\cos(\alpha)= x_{_M}$\\
 $\sin(\alpha)= y_{_M}$\\
 $\tan(\alpha)=\dfrac {sin(\alpha)} {cos(\alpha)}$
-\end{Beweis}\\
+\end{Definition}\\
 
 \definecolor{qqwuqq}{rgb}{0,0.39,0}
 \definecolor{ttzzqq}{rgb}{0.2,0.6,0}
@@ -56,21 +56,21 @@ Es ergeben sich folgende (wissenswerte) Werte:
 
 
 \section{Addtions- und Verdopplungssätze}
-\begin{Beweis}
+\begin{Theorem}
 $\cos(a - b) = \cos(a)\cos(b) + \sin(a)\sin(b)$\\
 $\sin(a - b) = \sin(a)\cos(b) - \cos(a)\sin(b)$\\
 $\cos(a + b) = \cos(a)\cos(b) - \sin(a)\sin(b)$\\
 $\sin(a + b) = \sin(a)\cos(b) + \cos(a)\sin(b)$
-\end{Beweis}
+\end{Theorem}
 \\
 Hieraus ergeben sich einige weitere Relationen, wie z.B. $\sin(2a)$. Diese lassen sich jedoch schnell und leicht herleiten.
 \section{Allgemeine Sinus- und Kosinussätze}
 
 In einem beliebigen Dreieck gelten abgewandelte Formen der aus der 8. Klasse bekannten Sätze:
-\begin{Beweis}
+\begin{Theorem}
 $\dfrac {a} {sin(\alpha)}=\dfrac {b} {sin(\beta)}=\dfrac {c} {sin(\gamma)}$\\\\
 $c²=a²+b²-2abcos(\gamma)$
-\end{Beweis}
+\end{Theorem}
 \definecolor{qqwuqq}{rgb}{0,0.39,0}
 \begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=0.53cm,y=0.64cm]
 \clip(-0.4,-4.3) rectangle (9,3);
@@ -107,9 +107,9 @@ Bsp: Die Nullstellen der Funktion $f(x)=\sin(x)$ lassen sich dartstellen als: $x
 \item Bei der Teilung durch eine Sinusfunktion können Definitionslücken an dessen Nullstellen entstehen. Auch diese können in der bereits gezeigten Form angegeben werden.
 \end{enumerate}section{Polarkoordinaten}
 In der Kursstufe beschränken wir uns auf die Benutzung von Polarkoordinaten für Punkte in der Ebene (2D).
-\begin{Beweis}
+\begin{Definition}
 Polarkoordinaten sind eine Form der eindeutigen Punktangaben, doch anstatt wie kartesische Koordinaten 2 Entfernungen $x$ und $y$ zu verwenden, haben sie die Form $(r|\varphi)$. $r$ ist hierbei die Entfernung zum Origo und $\varphi$ ein orientierter Winkel (in $rad$).
-\end{Beweis}
+\end{Definition}
 \definecolor{zzzzzz}{rgb}{0.6,0.6,0.6}
 \definecolor{ffqqqq}{rgb}{1,0,0}
 \definecolor{qqzzqq}{rgb}{0,0.6,0}
@@ -146,3 +146,6 @@ Polarkoordinaten sind eine Form der eindeutigen Punktangaben, doch anstatt wie k
 \item  $y=r\cdot\sin(\varphi)$
 \end{itemize}
 rwlgh
+\begin{Definition}{djhf}
+dgkjh
+\end{Definition}
