--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@
 \usepackage{epstopdf}
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
+\usepackage{tikz,lipsum,lmodern}
 \nonstopmode
 \pagestyle{fancy}
 \fancyhead{}
