--- a/style.tex
+++ b/style.tex
@@ -32,19 +32,19 @@
 
 %Beweis:
 \newenvironment{Beweis}
-  {\begin{tcolorbox}[colback=grey!5!white,colframe=grey!75!black,opacityframe=0.5, opacitybacktitle=0.5,title=Beweis]}
+  {\begin{tcolorbox}[colback=grey!5!white,colframe=grey!75!black,opacityframe=0.5, opacitybacktitle=0.5,sharpish corners,boxrule=0pt,frame hidden,title=Beweis]}
   {\end{tcolorbox}}
 
 
 %Definition:
 \newenvironment{Definition}
-  {\begin{tcolorbox}[colback=red!5!white,colframe=red!75!black,title=Definition \thesubsection]}
+  {\begin{tcolorbox}[colback=red!5!white,colframe=red!75!black,sharpish corners,boxrule=0pt,frame hidden,title=Definition \thesubsection]}
   {\end{tcolorbox}}}
 
 
 %Theorem:
 \newenvironment{Theorem}
-  {\begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black,title=Theorem]}
+  {\begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black,sharpish corners,boxrule=0pt,frame hidden,title=Theorem]}
   {\end{tcolorbox}}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Es fehlen:
