kap5 erweitert, aber nicht vollständig

--- a/main.tex
+++ b/main.tex
@@ -23,7 +23,7 @@
 \parindent 0ex
 
 
-
+\nonstopmode
 
 
 %Zahlenmengen:
@@ -31,6 +31,7 @@
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
+\newcommand{\P}{\paragraph{}}
 
 
 \include{style}
