--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -2,29 +2,49 @@
 
 
 \section{Vektoren}
-\begin{Bws}
-Ein Vektor ist Element eines Vektorraums.
-\end{Bws}\\
-Vektorräume, wir erinnern uns zurück. Verknüpfungen, inverse Elemente und die dazugehörenden Gesetze, konsequente Definitionen und mathematische Korrektheit, die guten alten Zeiten...\\
+
+\paragraph{} Ein Vektor ist Element eines Vektorraums.\\ \\
+\paragraph{} Vektorräume, wir erinnern uns zurück. Verknüpfungen, inverse Elemente und die dazugehörenden Gesetze, konsequente Definitionen und mathematische Korrektheit, die guten alten Zeiten...\\
 Tatsächlich kann ein Vektor in den meisten Fällen als Verschiebung bezeichnet werden, \textbf{nicht aber als Pfeil oder Strich!}\\
+
 \subsection{Besondere Vektoren}
+
 \subsubsection{Der Ortsvektor}
-Der Vektor von $O$ auf den Punkt $P$, geschrieben als $\vec{OP}$ oder $\vec{o}$.\\
-Hat $P$ die Koordinaten $(P_1|P_2|...|P_n)$, so besitzt $\vec{o}$ die Darstellung $\left(\begin{array}{c} P_1 \\ P_2 \\ ...\\P_n\end{array}\right)$.
+
+\paragraph{} Der Vektor von $O$ auf den Punkt $P$, geschrieben als $\vec{OP}$ oder $\vec{o}$.\\
+\paragraph{} Hat $P$ die Koordinaten $(P_1|P_2|...|P_n)$, so besitzt $\vec{o}$ die Darstellung $\left(\begin{array}{c} P_1 \\ P_2 \\ ...\\P_n\end{array}\right)$.
 \subsubsection{Der Nullvektor}
-Der Vektor mit Wert $\left(\begin{array}{c} 0 \\ 0 \\ ...\\0\end{array}\right)$, er hat keine und alle Richtungen zugleich.
+\paragraph{} Der Vektor mit Wert $\left(\begin{array}{c} 0 \\ 0 \\ ...\\0\end{array}\right)$, er hat keine und alle Richtungen zugleich.
 \begin{Bemerkung}
 Er ist somit das neutrale Element der Vektoraddition.
 \end{Bemerkung}
+
 \subsubsection{Der Verbindungsvektor}
-Der Vektor $\vec{AB}$ ist der Vektor, der den Punkt $A$ auf den Punnḱt $B$ abbildet. Er ist definiert als: $\vec{AB}=\vec{OB}-\vec{OA}$.
-\\Rechnung? b1-a1 b2-12 ...?
+
+\paragraph{} Der Vektor $\vec{AB}$ ist der Vektor, der den Punkt $A$ auf den Punkt $B$ abbildet. Er ist definiert als:\\ $\vec{AB}=\vec{OB}-\vec{OA}$, woraus folgt, dass: \begin{center} $\vec{AB} = \left(\begin{array}{c} b_1 - a_1 \\ b_2 - a_2 \\ ... \\ b_n - a_n \end{array}\right)$. \end{center}
+
 \subsubsection{Der Gegenvektor}
-Der Gegenvektor zu $\vec{AB}$ ist $\vec{BA}$, definiert als  $-\vec{AB}$.
+
+\paragraph{} Der Gegenvektor zu $\vec{AB}$ ist $\vec{BA}$, definiert als  $-\vec{AB}$.
 \begin{Bemerkung}
 Er ist somit das inverse Element der Vektoraddition.
 \end{Bemerkung}
+
+\subsection{Der Einheitsvektor}
+
+\subsubsection{Norm eines Vektors}
+
+\paragraph{} Die Norm eines Vektors ist anschaulich als seine Länge zu interpretieren. Der Betrag, wie sie ebenfalls genannt wird, eines Vektors $\vec{v}$ ist folgendermaßen definiert: $\text{|}\vec{v}\text{|} = \sqrt{\displaystyle\sum_{i=1}^{n}v_{i^2}} ; \vec{v}\in\R^n$
+\begin{tikzpicture}
+\end{tikzpicture}
+
+
+\paragraph{}
+
+
+\section{Linearkombination}
+\subsection{Lineare Abhängigkeit}
 \section{Winkel zwischen Vektoren}
 \section{Geraden}
 \section{Ebenen}
-\section{Skalarprodukte??}
+\section{Skalarprodukt}
