Trig. abgeschlossen (Prüfung erbeten)

--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -24,7 +24,8 @@ Der Gegenvektor zu $\vec{AB}$ ist $\vec{BA}$, definiert als  $-\vec{AB}$.
 \begin{Bemerkung}
 Er ist somit das inverse Element der Vektoraddition.
 \end{Bemerkung}
-\section{Winkel zwischen Vektoren}
+\section{Winkel zwischen Vektoren}\subsection{Orientierte Winkel}
+
 \section{Geraden}
 \section{Ebenen}
 \section{Skalarprodukte??}
