--- a/style.tex
+++ b/style.tex
@@ -48,8 +48,7 @@
   {\end{tcolorbox}}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Es fehlen:
-%Definitionen (rot?)
-
+%Beispiele
 %Fancy titles?
 %\newenvironment{Beweis}
 %{\par\noindent\normalfont\par\nopagebreak%
