Trig. abgeschlossen (Prüfung erbeten)

--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -1,10 +1,10 @@
 \chapter{Trigonometrie}
 \section{Kurze Wiederholung}
 \begin{Definition}
-Im Kreis mit Radius 1 gelte:\\
-$\cos(\alpha)= x_{_M}$\\
-$\sin(\alpha)= y_{_M}$\\
-$\tan(\alpha)=\dfrac {sin(\alpha)} {cos(\alpha)}$
+  Im Kreis mit Radius 1 gelte:\\
+  $\cos(\alpha)= x_{_M}$\\
+  $\sin(\alpha)= y_{_M}$\\
+  $\tan(\alpha)=\dfrac {sin(\alpha)} {cos(\alpha)}$
 \end{Definition}\\
 \definecolor{qqwuqq}{rgb}{0,0.39,0}
 \definecolor{ttzzqq}{rgb}{0.2,0.6,0}
@@ -125,7 +125,7 @@ In der Kursstufe beschränken wir uns auf die Benutzung von Polarkoordinaten fü
   \draw[->,color=black] (0,-0.29) -- (0,2.63);
   \draw[color=black] (0.05,2.43) node [anchor=west] { y};
   \clip(-0.2,-0.29) rectangle (2.64,2.63);
-  \draw [shift={(0,0)},color=ffqqqq,fill=ffqqqq,fill opacity=0.1] (0,0) -- (0:0.41) arc (0:46.48:0.41) -- cycle;
+  \draw [shift={(0,0)},color=ffqqqq,fill=ffqqqq,fill opacity=0.1] (0,0) -- (0:0.41) arc (0:46.48:0.4) -- cycle;
   \draw [color=qqzzqq] (0,0)-- (2.05,2.16);
   \draw [color=zzzzzz] (0,2.16)-- (2.05,2.16);
   \draw [color=zzzzzz] (2.05,2.16)-- (2.05,0);
@@ -133,7 +133,7 @@ In der Kursstufe beschränken wir uns auf die Benutzung von Polarkoordinaten fü
     \fill [color=black] (2.05,2.16) circle (1.5pt);
     \draw[color=black] (2.12,2.29) node {$P$};
     \draw[color=qqzzqq] (1.16,1.04) node {r};
-    \draw[color=ffqqqq] (0.31,0.17) node {$\phi$};
+    \draw[color=ffqqqq] (0.5,0.17) node {$\varphi$};
     \draw[color=zzzzzz] (0.96,2.02) node {y};
     \draw[color=zzzzzz] (1.9,1.03) node {x};
   \end{scriptsize}
