--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -33,7 +33,8 @@ Die Funktion $f(x)=|x|$ ist nicht differenzierbar, da bei der Stelle $x_{0}=0$ d
 
 \subsection{Zusammenhang zwischen Stetigkeit und Differenzierbarkeit}
 
-Ist eine Funktion $f$ an der Stelle $x_{0}$ differenzierbar, so ist sie an dieser Stelle auch stetig.Die Umkehrung gilt erst einmal nicht, aber es gibt eine verneinende Aussage: Ist $f$ an der Stelle $x_{0}$ nicht stetig, so ist sie hier auch nicht differenzierbar.\\
+Ist eine Funktion $f$ an der Stelle $x_{0}$ differenzierbar, so ist sie an dieser Stelle auch stetig.
+Die Umkehrung gilt erst einmal nicht, aber es gibt eine verneinende Aussage: Ist $f$ an der Stelle $x_{0}$ nicht stetig, so ist sie hier auch nicht differenzierbar.\\
 
 \section{Ableitungsregeln}
 
@@ -153,7 +154,26 @@ $\left. \begin{array}{rcl}
 
 \subsection{Grenzwerte}
 
+
+
 \subsection{Asymptoten}
+
+Eine Asymptote ist eine Gerade oder Kurve, die sich dem Graphen einer Funktion immer weiter ann"ahert. Dabei unterscheidet man verschiedene Fälle:\\
+\begin{enumerate}
+\item \textbf{Senkrechte Asymptote}: Hat $f$ an der stelle $x_{0}$ eine Polstelle, und gilt:\\
+$\lim\limits_{x \rightarrow x_{0^{+}}} f(x) = \pm \infty$\\
+dann ist die Gerade $x=x_{0}$ eine senkrechte Asymptote von $f$.\\
+\item \textbf{Waagerechte Asymptote}: Konvergiert $f$ f"ur $x\rightarrow \infty$ gegen eine reelle Zahl $g\in \R$, das heißt $\lim\limits_{x \rightarrow x_{0^{+}}}{f(x)}=g$.\\
+Die Gerde $y=g$ ist die \textbf{waagerechte} Asymptote von $f$. Das Gleiche gilt f"ur $\lim\limits_{x \rightarrow -\infty}$.\\
+Bei gebrochenrationalen Funktionen ist dies der Fall, wenn der Z"ahlergrad kleiner (dann ist $g=0$) oder gleich dem Nennergrad $m$ ist.\\
+\item \textbf{Schr"age Asymptote}: Sie ist eine Gerade ($g:\R \rightarrow \R$), der sich $f$ mit $|x|\rightarrow \infty$ beliebig ann"ahert:\\
+$\lim\limits_{x \rightarrow \infty}}{[f(x)-g(x)]}=0$ oder $\lim\limits_{x \rightarrow -\infty}}{[f(x)-g(x)]}=0$\\
+Bei einer gebrochenrationalen Funktion ist der ''Fehlergrad''???(wie nennt man das??), das heißt der Abstand von $g$ zu $f$ durch den Rest der Polynomdivision von Z"ahler mit Nenner gegeben.\\
+\item \textbf{Asymptotische Kurven} Indem man in der Definition der schr"agen Asymptote auch Polynome zul"asst, erh"alt man N"aherungskuven, die die gleiche Limesbedingung erf"ullen muss:\\
+$\lim\limits_{x \rightarrow \infty}}{[f(x)-P(x)]}=0$ oder $\lim\limits_{x \rightarrow -\infty}}{[f(x)-P(x)]}=0$\\
+Diese begegnen einen bei gebrochenrationalen Funktion mit $n>m+1.\\
+\end{enumerate}
+
 
 \subsection{Monotonie}
 
