--- a/kap1/kap1.tex
+++ b/kap1/kap1.tex
@@ -1,1 +1,42 @@
 \chapter{Folgen}
+
+Eine Funktion , bei der jeder natürlichen Zahl eine reelle Zahl zugeordnet wird, nennt man Folge.\\
+Folgen können auch nur für Teilbereiche von $\N$ definiert sein.\\
+$(a_{n})_{(n\in\N)}$ bezeichnet die Folge, wobei $\N\rightarrow\R$\\
+
+
+\section{Verschiedene Darstellungen}
+
+
+\subsection{Explizite Darstellung}
+
+Wenn ein beliebiges Glied der Folge direkt berechenbar ist, ist ihre Darstellung explizit.
+
+\subsection{Rekursive Darstellung}
+
+Wenn für die Berechnung des n-ten Gliedes einer Folge das (n-1)-te Glied benötigt wird, ist ihre Darstellung rekursiv.
+
+
+\section{Auffällige Folgen}
+
+
+\subsection{Arithmetische Folgen}
+
+\subsection{Geometrische Folgen}
+
+
+\section{Klassifizierung von Folgen}
+
+
+\subsection{Monotonie}
+
+\subsection{Beschränktheit}
+
+\subsection{Konvergenz}
+
+\subsubsection{Definition}
+\subsubsection{Epsilon-n0-Definition}
+\subsubsection{Grenzwertsätze}
+
+
+\section{Vollständige Induktion}
