--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -45,18 +45,20 @@
 Es ergeben sich folgende (wissenswerte) Werte:
 \\
 \begin{center}
-  \begin{tabu}to 0.9\textwidth {|X[c]|X[c]|X[c]|X[c]|X[c]|X[c]|X[c]|X[c]|X[c]|}
+  \begin{tabu} to 0.9\textwidth{|X[c]|X[c]|X[c]|X[c]|X[c]|X[c]|X[c]|X[c]|X[c]|}
+
     \hline
     & 0$^\circ$ & 30$^\circ$ & 45$^\circ$ & 60$^\circ$ & 90$^\circ$ & 180$^\circ$ & 270$^\circ$ & 360$^\circ$\\
-    & 0 & $\dfrac{\pi}{6}$ & $\dfrac{\pi}{4}$ & $\dfrac{\pi}{3}$ & $\dfrac{\pi}{2}$ & \pi & $\dfrac{3\pi}{2}$ & 2\pi\\
+    & 0 & $\dfrac{\pi}{6}$ & $\dfrac{\pi}{4}$ & $\dfrac{\pi}{3}$ & $\dfrac{\pi}{2}$ & \pi & $\dfrac{3\pi}{2}$ & $2\pi$\\
     \hline
     $\sin(\alpha)$ & 0 & $\dfrac{1}{2}$ & $\dfrac{1}{\sqrt{2}}$ & $\dfrac{\sqrt{3}}{2}$ & 1 & 0 & -1 & 0\\
     \hline
     $\cos(\alpha)$ & 1 & $\dfrac{\sqrt{3}}{2}$ & $\dfrac{1}{\sqrt{2}}$ & $\dfrac{1}{2}$ & 0 & -1 & 0 & 1\\
     \hline
-    $\tan(\alpha)$ & 0 & $\dfrac{{1}}{\sqrt{3}}$ & 1  & $\sqrt{3}$ & X & 0 & X & 0\\
+    $\tan(\alpha)$ & 0 & $\dfrac{{1}}{\sqrt{3}}$ & 1 & $\sqrt{3}$ & X & 0 & X & 0\\
     \hline
   \end{tabu}
+
 \end{center}
 \section{Addtions- und Verdopplungssätze}
 \begin{Theorem}
