Neues env.: Beispiel (unaufdringlich)

--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -107,8 +107,9 @@ Zur Vollständigen Funktionsdiskussion einer Sinus-Funktion sind einige Besonder
   \item Symmetrieeigenschaften\\
   Hier sollte zumindest bekannt sein, dass $f(x)=\sin(x)$ punktsymmetrisch zum Origo ist, und dass $f(x)=\cos(x)$ Achsensymmetrisch zur $y$-Achse ist.
   \item Die Null-, Extrem- und Wendestellen sind in Form einer Menge anzugeben. (Es sei denn, die Aufgabenvorschrift fordert explizit auf eine Begrenzung auf ein angegebenes Intervall auf)\\
-  Bsp: Die Nullstellen der Funktion $f(x)=\sin(x)$ lassen sich dartstellen als: $x \in \{k\pi|k \in \Z\}$
-  \\ In umgebung einfärben
+  \begin{Beispiel}
+    Die Nullstellen der Funktion $f(x)=\sin(x)$ lassen sich dartstellen als: $x \in \{k\pi|k \in \Z\}$
+  \end{Beispiel}
   \item Bei der Teilung durch eine Sinusfunktion können Definitionslücken an dessen Nullstellen entstehen. Auch diese können in der bereits gezeigten Form angegeben werden.
   \end{enumerate}
 \section{Polarkoordinaten}
