--- a/style.tex
+++ b/style.tex
@@ -46,10 +46,20 @@
 \newenvironment{Theorem}
   {\begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black,sharpish corners,boxrule=0pt,frame hidden,title=Theorem]}
   {\end{tcolorbox}}}
+
+\newenvironment{Beispiel}
+  {\par\noindent\normalfont\par\nopagebreak%
+  \begin{mdframed}[
+     linewidth=2pt,
+     linecolor=green,
+     bottomline=false,topline=false,rightline=false,
+     innerrightmargin=0pt,innertopmargin=0pt,innerbottommargin=0pt,
+     innerleftmargin=1em,% Distanz zwischen vertikaler Strich & Inhalt
+     skipabove=.5\baselineskip
+   ]\underline{Beispiel:}\\}
+{\end{mdframed}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%Es fehlen:
-%Beispiele
-%Fancy titles?
+%ALT:
 %\newenvironment{Beweis}
 %{\par\noindent\normalfont\par\nopagebreak%
 %  \begin{mdframed}[
