Ein paar Fehlermeldungen eliminiert

--- a/style.tex
+++ b/style.tex
@@ -39,13 +39,13 @@
 %Definition:
 \newenvironment{Definition}
   {\begin{tcolorbox}[colback=red!5!white,colframe=red!75!black,sharpish corners,boxrule=0pt,frame hidden,title=Definition \thesubsection]}
-  {\end{tcolorbox}}}
+  {\end{tcolorbox}}
 
 
 %Theorem:
 \newenvironment{Theorem}
   {\begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black,sharpish corners,boxrule=0pt,frame hidden,title=Theorem]}
-  {\end{tcolorbox}}}
+  {\end{tcolorbox}}
 
 \newenvironment{Beispiel}
   {\par\noindent\normalfont\par\nopagebreak%
