--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -30,6 +30,16 @@ Er ist somit das neutrale Element der Vektoraddition.
 \begin{Bemerkung}
 Er ist somit das inverse Element der Vektoraddition.
 \end{Bemerkung}
+
+\subsection{Der Einheitsvektor}
+
+\subsubsection{Norm eines Vektors}
+
+\paragraph{} Die Norm eines Vektors ist anschaulich als seine Länge zu interpretieren. Der Betrag, wie sie ebenfalls genannt wird, eines Vektors $\vec{v}$ ist folgendermaßen definiert: $\text{|}\vec{v}\text{|} = \sqrt{\displaystyle\sum_{i=1}^{n}v_{i^2}} ; \vec{v}\in\R^n$
+\begin{tikzpicture}
+\end{tikzpicture}
+
+
 \section{Winkel zwischen Vektoren}\subsection{Orientierte Winkel}
 
 \section{Geraden}
