Anfang Funktionsuntersuchung Trig.

--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -152,3 +152,44 @@ In der Kursstufe beschränken wir uns auf die Benutzung von Polarkoordinaten fü
   \item $x = r\cdot\cos(\varphi)$
   \item  $y=r\cdot\sin(\varphi)$
 \end{itemize}
+\section{Beispiel einer Funktionsdiskussion}
+Sei die Funktion $f(x)=2\cos(x)+2\sin(x)\cos(x)$, ihr Schaubild sei K.\\
+Untersuchen Sie K im Intervall $[0;2\pi]$ auf gemeinsame Punkte mit der $x$-Achse, sowie Extrem- und Wendepunkte. Zeichnen Sie K im Intervall $[0;2\pi]$. Untersuchen Sie K auf Symmetrie.
+\subsection{Definitionsmenge}
+  $D=\R$
+\subsection{Periodizität und Amplitude}
+\subsection{Nullstellen}
+  Notwendige & hinreichende Bedingung: $f(x)=0$\\
+  $\Leftrightarrow 2\cos(x)+2\sin(x)\cos(x)=0$\\
+  $\Leftrightarrow 2\cos(x)(1+\sin(x))=0$\\
+  $\Rightarrow^{S.d.N}$
+  \left\{\begin{array}{rccl}
+    $2\cos(x)&=&0&$\\
+    $1+\sin(x)&=&0&$
+  \end{array}\right$\\
+  $\Leftrightarrow$
+  $\left\{ \begin{array}{rccl}
+    $\cos(x)&=&0&$\\
+    $\sin(x)&=&-1&$
+  \end{array}\right$\\
+  $\Leftrightarrow$
+  $\left\{ \begin{array}{rccl}
+    $x_1&=&\dfrac{1}{2}\pi&$\\\\
+    $x_2&=&\dfrac{3}{2}\pi&$
+  \end{array}\right$\\
+  $\Rightarrow \mathbb{L}=\{(\dfrac{1}{2}\pi|0);(\dfrac{3}{2}\pi|0)\}$
+\subsection{Ableitungen}
+  $\begin{array}{rcl}
+    $f'(x)&=&-2\sin(x)+2(\cos(x)\cos(x)-\sin(x)\sin(x))$\\
+    $&=&-2\sin(x)+2(\cos^2(x)-\sin^2(x))$\\
+    $&=&-2\sin(x)+2(1-\sin^2(x)-\sin^2(x))$\\
+    $&=&-4\sin^2(x)-2\sin(x)+2$
+  \end{array}$\\
+  $\begin{array}{rcl}
+    $f''(x)&=&-4(\cos(x)\sin(x)+\sin(x)\cos(x))-2\cos(x)$\\
+    $&=&-8\sin(x)\cos(x)-2\cos(x)$
+  \end{array}$\\
+  $\begin{array}{rcl}
+    $f'''(x)&=&$\\
+    $&=&$
+  \end{array}$
