--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
 \usepackage{tabu}                               %Bessere Tabellen
+\usepackage{esvect}
 
 \pagestyle{fancy}
 \fancyhead{}
