--- a/kap1/kap1.tex
+++ b/kap1/kap1.tex
@@ -2,7 +2,7 @@
 
 Eine Funktion , bei der nur natürlichen Zahlen eine reelle Zahl zugeordnet wird, nennt man Folge.\\
 Folgen können auch nur für Teilbereiche von $\N$ definiert sein.\\
-$(a_{n})_{n\in\N}$ bezeichnet die Folge, wobei $\N\rightarrow\R$\\
+$(a_{n})_{n\in\N}$ bezeichnet die Folge, wobei $a:\N\rightarrow\R$\\
 
 
 		\section{Verschiedene Darstellungen}
@@ -12,8 +12,7 @@ $(a_{n})_{n\in\N}$ bezeichnet die Folge, wobei $\N\rightarrow\R$\\
 
 Wenn ein beliebiges Glied der Folge direkt berechenbar ist, ist ihre Darstellung explizit.
 \begin{Bemerkung}
-Beispiele\\
-
+Beispiele
 \begin{enumerate}
 \item  $a_{n}=3^n \Rightarrow a_{4}=3^4=91$
 \item Die Folge der $n-ten$ positiven, ungeraden Zahl:\\
@@ -27,7 +26,7 @@ $a_{n}=1+2\cdot(n-1) \Rightarrow$ Die 8. positive, ungerade Zahl ist $ a_{8}=1+2
 Wenn für die Berechnung des $n-ten$ Gliedes einer Folge das $(n-1)-te$ Glied benötigt wird, ist ihre Darstellung rekursiv.\\
 In diesen Fällen braucht man immer ein Startglied, oft $a_{0}$ oder $ a_{1}$.
 \begin{Bemerkung}
-Beispiele\\
+Beispiele
 
 \begin{enumerate}
 \item  $a_{n}=3\cdot a_{n-1}+2;a_{0}=5\\
@@ -42,17 +41,17 @@ $a_{n}=a_{n-1}+2;a_{1}=1
 
 \begin{Bemerkung}
 Bemerkung\\
-Für manche Folgen sind beide Darstellungen möglich, wobei die explizite Darstellung oftmals viel praktischer ist, da die Berechnung der Folgeglieder anhand der rekursiven Darstellung schnell sehr aufwendig wird
+Für manche Folgen sind beide Darstellungen möglich, wobei die explizite Darstellung oftmals viel praktischer ist, da die Berechnung der Folgeglieder anhand der rekursiven Darstellung schnell sehr aufwendig wird.
 \end{Bemerkung}
 
 \subsubsection{Web-Diagramme}
 Hier handelt es sich um eine graphisches Verfahren, das dazu dient, das Verhalten einer Folge, deren Darstellung rekursiv ist, zu untersuchen.\\
-Dazu muss man der rekursiven Folgenvorschrift eine Funktion $f(a_{n-1})=a_{n}$ zuordnen, sodass - grob gesagt - " die Funktion das Gleiche mit x macht, dass die Folge macht, um von $a_{n}$ auf $a_{n+1}$ zu kommen. Zusätzlich zeichnet man in ein kartesisches Koordinatensystem die Hauptdiagonale ein (entspricht dem Graphen von $f(x)=x$.\\
+Dazu muss man der rekursiven Folgenvorschrift eine Funktion $f(a_{n-1})=a_{n}$ zuordnen, sodass - grob gesagt - " die Funktion das Gleiche mit x macht, dass die Folge macht, um von $a_{n}$ auf $a_{n+1}$ zu kommen. Zusätzlich zeichnet man in ein kartesisches Koordinatensystem die Hauptdiagonale ein (entspricht dem Graphen von $f(x)=x$).\\
 Dann trägt man das erste Folgeglied auf der Abzissenachse ein und verbindet ihn mit der entsprechenden Funktion anhand eines vertikalen
 
 \begin{Bemerkung}
 Bemerkung\\
-Dieses Verfahren kann aber ausschließlich bei rekusiven Folgen angewendet werden, bei denen keine zusätzliche Abhängigkeit von $n$ vorliegt (Beispiel:$a_{n}=3a_{n-1}+3+4n$) oder die Rekursivitätsebene den 1. Grad überschreitet, was bedeutet, dass $a_{n}$ nicht nur in Abhängigkeit von $a_{n-1}$ beschrieben wird, sondern zusätzlich von mindestens $a_{n-2}$ (Beispiel: die Fibonacci-Folge) \\
+Dieses Verfahren kann aber ausschließlich bei rekusiven Folgen angewendet werden, bei denen keine zusätzliche Abhängigkeit von $n$ vorliegt (Beispiel: $a_{n}=3a_{n-1}+3+4n$) oder die Rekursivitätsebene den 1. Grad überschreitet, was bedeutet, dass $a_{n}$ nicht nur in Abhängigkeit von $a_{n-1}$ beschrieben wird, sondern zusätzlich von mindestens $a_{n-2}$ (Beispiel: die Fibonacci-Folge).\\
 \end{Bemerkung}
 
 
@@ -62,8 +61,49 @@ Dieses Verfahren kann aber ausschließlich bei rekusiven Folgen angewendet werde
 
 	\subsection{Arithmetische Folgen}
 
+Eine Folge wird arithmetisch genannt, wenn die Differenz zweier aufeinander folgender Glieder konstant ist.
+
+\begin{enumerate}
+\item Rekursive Darstellung:\\
+\indent $a_{n}=a_{n-1}+d$
+\item Explizite Darstellung:\\
+\indent Mit Startglied $a_{0}$: $a_{n}=a_{0}+n\cdot d$\\
+\indent Mit Startglied $a_{1}$: $a_{n}=a_{1}+(n-1)\cdot d$\\
+\indent Mit Startglied $a_{x}$: $a_{n}=a_{x}+(n-x)\cdot d$
+\end{enumerate}
+
+\begin{Bemerkung}
+Bemerkung\\
+Letzteres gilt auch für beliebige Folgeglieder, also ist $a_{n}=a_{p}+(n-p)\cdot d;n,p\in\N$
+\end{Bemerkung}
+
+\begin{Bemerkung}
+Beispiel\\
+$a_{n}=a_{n-1}+3;a_{0}=0\Leftrightarrow a_{n}=0+n\cdot3
+\end{Bemerkung}
+
 	\subsection{Geometrische Folgen}
 
+Eine Folge wird geometrisch genannt, wenn der Quotient zweier aufeinander folgender Glieder konstant ist.
+
+\begin{enumerate}
+\item Rekursive Darstellung:\\
+\indent $a_{n}=a_{n-1}\cdot q$
+\item Explizite Darstellung:\\
+\indent Mit Startglied $a_{0}$: $a_{n}=a_{0}\cdot q^n$\\
+\indent Mit Startglied $a_{1}$: $a_{n}=a_{1}\cdot q^{n-1}$\\
+\indent Mit Startglied $a_{x}$: $a_{n}=a_{x}\cdot q^{n-x}$
+\end{enumerate}
+
+\begin{Bemerkung}
+Bemerkung\\
+Letzteres gilt auch für beliebige Folgeglieder, also ist $a_{n}=a_{p}\cdot q^{n-p};n,p\in\N$
+\end{Bemerkung}
+
+\begin{Bemerkung}
+Beispiel\\
+$a_{n}=a_{n-1}\cdot3;a_{0}=2\Leftrightarrow a_{n}=2\cdot3^n
+\end{Bemerkung}
 
 		\section{Klassifizierung von Folgen}
 
